[project]
name = "deepagents-sandbox-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.3.8",
    "langsmith",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "langgraph-cli[inmem]>=0.4.12",
    "langchain-anthropic>=1.3.1",
]

[tool.uv.sources]
langsmith = { git = "https://github.com/langchain-ai/langsmith-sdk", subdirectory = "python" }
